--- a/src/css/Question.css
+++ b/src/css/Question.css
@@ -2,3 +2,19 @@
     margin-right: 15px;
     width: 30%;
 }
+
+#dropdown-basic {
+    background-color: darkgray;
+    border: 0px;
+    outline: 0px;
+}
+
+.dropdown-toggle {
+    border-color:darkgray;
+}
+
+.btn-success {
+    color: blue;
+    background-color: yellow;
+    border-color: rebeccapurple;
+}
